Layout test is crashing inside WebChromeClient::createWindow https://bugs.webkit.org/show_bug.cgi?id=232460 <rdar://81344393>

Reviewed by Brent Fulgham.

Add null check for local NetscapePluginHostProxy pointer variable.

* Plugins/Hosted/NetscapePluginHostManager.mm:
(WebKit::NetscapePluginHostManager::didCreateWindow):



Canonical link: https://commits.webkit.org/243662@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285018 268f45cc-cd09-0410-ab3c-d52691b4dbfc